tests/ui/parser/raw/raw-string.stderr
error[E0748]: unterminated raw string
  --> $DIR/raw-string.rs:2:13
   |
LL |     let x = r##"lol"#;
   |             ^ unterminated raw string
   |
   = note: this raw string should be terminated with `"##`
help: consider terminating the string here
   |
LL |     let x = r##"lol"##;
   |                     ~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0748`.
